Different results between CPU and GPU with new Nishita Sky Texture #78324

Closed
opened 2020-06-26 19:31:37 +02:00 by soulfire · 14 comments

System Information
Operating system: Windows-10
Graphics card: GeForce GT 1030/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-25 21:53, hash: 62aa103d48
2020-06-26 17:24, hash: b7b57e7155

Short description of error
Rendering with sky texture give wrong output

Exact steps for others to reproduce the error
Based on the default startup cube with sky texture
GPU CUDA compute gt 1030
1221.jpg

tea1.jpg

CPU compute
1221 cpu compue.jpg

test.blend

**System Information** Operating system: Windows-10 Graphics card: GeForce GT 1030/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-25 21:53, hash: `62aa103d48` 2020-06-26 17:24, hash: `b7b57e7155` **Short description of error** Rendering with sky texture give wrong output **Exact steps for others to reproduce the error** Based on the default startup cube with sky texture GPU CUDA compute gt 1030 ![1221.jpg](https://archive.blender.org/developer/F8645752/1221.jpg) ![tea1.jpg](https://archive.blender.org/developer/F8646026/tea1.jpg) CPU compute ![1221 cpu compue.jpg](https://archive.blender.org/developer/F8645754/1221_cpu_compue.jpg) [test.blend](https://archive.blender.org/developer/F8646024/test.blend)
Author

Added subscriber: @TomG

Added subscriber: @TomG
soulfire changed title from Sky texture glitched to Sky texture glitched/Cycles 2020-06-26 19:32:02 +02:00
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Can't reproduce the issue, try to update the Nvidia drivers, do you get any issues with CPU rendering?
image.png

Can't reproduce the issue, try to update the Nvidia drivers, do you get any issues with CPU rendering? ![image.png](https://archive.blender.org/developer/F8653955/image.png)
Author

I updated the drivers. It's the same. CUDA is giving glitched output.

Capture.JPG

In todays build CPU rendering is OK. Only render with CUDA is glitched.

If I render with SKY LIGHT without Sky texture, rendering is fine.

Capture2.JPG

I updated the drivers. It's the same. CUDA is giving glitched output. ![Capture.JPG](https://archive.blender.org/developer/F8654027/Capture.JPG) In todays build CPU rendering is OK. Only render with CUDA is glitched. If I render with SKY LIGHT without Sky texture, rendering is fine. ![Capture2.JPG](https://archive.blender.org/developer/F8654029/Capture2.JPG)
Member

Does it happen with other scenes too? i mean, try without the sky, if the issue persists then the problem could be related to GPU rathen than the sky.

Does it happen with other scenes too? i mean, try without the sky, if the issue persists then the problem could be related to GPU rathen than the sky.
Author

In #78324#969285, @nacioss wrote:
Does it happen with other scenes too? i mean, try without the sky, if the issue persists then the problem could be related to GPU rathen than the sky.

I updated previous. With sky light without sky texture, CUDA rendering is fine.

Only sky texture with CUDA rendering is giving issues in every scene.

> In #78324#969285, @nacioss wrote: > Does it happen with other scenes too? i mean, try without the sky, if the issue persists then the problem could be related to GPU rathen than the sky. I updated previous. With sky light without sky texture, CUDA rendering is fine. Only `sky texture with CUDA` rendering is giving issues in every scene.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Ok, i can reproduce it now, it does only with CUDA + CPU, will dig in the code soon, thank you a lot for the report ;) .
Meanwhile, avoid using such low Sun Size values.
EDIT: Using values from 0.4 to above works well

Ok, i can reproduce it now, it does only with CUDA + CPU, will dig in the code soon, thank you a lot for the report ;) . Meanwhile, avoid using such low Sun Size values. EDIT: Using values from 0.4 to above works well
Author

In #78324#969304, @nacioss wrote:
Using values from 0.2 to above works well.

It's the same glitch only harder to detect. Zoom in and you'll see.

Sun size 0.2:

sun size 0_2.jpg

> In #78324#969304, @nacioss wrote: > Using values from 0.2 to above works well. It's the same glitch only harder to detect. Zoom in and you'll see. Sun size 0.2: ![sun size 0_2.jpg](https://archive.blender.org/developer/F8654076/sun_size_0_2.jpg)

This issue was referenced by blender/cycles@3a16a5a50b

This issue was referenced by blender/cycles@3a16a5a50baaa500ac434fbfc2da2d330a309aee

This issue was referenced by 7fcb6bc59c

This issue was referenced by 7fcb6bc59c85beab36dbfcec91d0cfaf5291f029
Lukas Stockner changed title from Sky texture glitched/Cycles to Different results between CPU and GPU with new Nishita Sky Texture 2020-07-08 02:11:04 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Lukas Stockner self-assigned this 2020-07-08 02:55:55 +02:00
Member

In case anyone is curious about the difference the fix makes, here's a 0.1° sun at very high focal length:

CPU before:
sun_before_fix.png
GPU before:
sun_before_fix_gpu.png
Both after:
sun_after_fix.png

In case anyone is curious about the difference the fix makes, here's a 0.1° sun at very high focal length: CPU before: ![sun_before_fix.png](https://archive.blender.org/developer/F8677010/sun_before_fix.png) GPU before: ![sun_before_fix_gpu.png](https://archive.blender.org/developer/F8677012/sun_before_fix_gpu.png) Both after: ![sun_after_fix.png](https://archive.blender.org/developer/F8677014/sun_after_fix.png)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78324
No description provided.